@@ -1,104 +1,287 @@
 package com.example.demowithtests;
 
 import com.example.demowithtests.domain.Employee;
-import com.example.demowithtests.repository.Repository;
-import com.example.demowithtests.web.Controller;
+import com.example.demowithtests.dto.EmployeeDto;
+import com.example.demowithtests.dto.EmployeeReadDto;
+import com.example.demowithtests.service.EmployeeService;
+import com.example.demowithtests.util.config.EmployeeConverter;
+import com.example.demowithtests.web.EmployeeController;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.Ignore;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.runner.RunWith;
-import org.mockito.Mockito;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
-import java.util.ArrayList;
+
 import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.notNullValue;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 
-@RunWith(SpringRunner.class)
-@WebMvcTest(Controller.class)
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
+import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+
+
+@ExtendWith(SpringExtension.class)
+@ExtendWith(MockitoExtension.class)
+@WebMvcTest(controllers = EmployeeController.class)
+@DisplayName("Employee Controller Tests")
 public class ControllerTests {
 
-    @Autowired
-    MockMvc mockMvc;
-
+    @SuppressWarnings("SpringJavaInjectionPointsAutowiringInspection")
     @Autowired
     ObjectMapper mapper;
 
     @MockBean
-    Repository repository;
+    EmployeeService service;
 
-    @Ignore
+    @MockBean
+    EmployeeConverter employeeConverter;
+
+    @SuppressWarnings("SpringJavaInjectionPointsAutowiringInspection")
+    @Autowired
+    private MockMvc mockMvc;
+
     @Test
-    public void createEmployee_success() throws Exception {
-        Employee employee = Employee.builder()
-                .name("John")
+    @DisplayName("POST /api/users")
+    @WithMockUser(roles = "ADMIN")
+    public void createPassTest() throws Exception {
+        var response = EmployeeDto.builder()
+                .id(1)
+                .name("Mike")
+                .email("mail@gmail.com")
+                .country("UK")
                 .build();
 
-        Mockito.when(repository.save(employee)).thenReturn(employee);
+        var employee = Employee.builder()
+                .id(1)
+                .name("Mike")
+                .email("mail@gmail.com")
+                .build();
 
-        MockHttpServletRequestBuilder mockRequest = MockMvcRequestBuilders.post("/api/users")
+        when(employeeConverter.toDto(any(Employee.class))).thenReturn(response);
+        when(employeeConverter.toEmployee(any(EmployeeDto.class))).thenReturn(employee);
+        when(service.create(any(Employee.class))).thenReturn(employee);
+
+        MockHttpServletRequestBuilder mockRequest = MockMvcRequestBuilders
+                .post("/api/users")
+            //    .with(csrf())
                 .contentType(MediaType.APPLICATION_JSON)
-                .accept(MediaType.APPLICATION_JSON)
-                .content(this.mapper.writeValueAsString(employee));
+                .content(mapper.writeValueAsString(employee));
+
+        mockMvc.perform(mockRequest)
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.id", is(1)))
+                       .andReturn();
+
+        verify(service).create(any());
+    }
+
+    @Test
+    @DisplayName("Entity POST /api/users")
+    @WithMockUser(roles = "ADMIN")
+    public void testEntitySave() throws Exception {
+        var employeeToBeReturn = Employee.builder()
+                .id(1)
+                .name("Mark")
+                .country("France")
+                .build();
+        doReturn(employeeToBeReturn).when(service).create(any());
+        when(this.service.create(any(Employee.class))).thenReturn(employeeToBeReturn);
+
+        // Execute the POST request
+        MockHttpServletRequestBuilder mockRequest = MockMvcRequestBuilders
+                .post("/api/usersS")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(mapper.writeValueAsString(employeeToBeReturn));
+
+        mockMvc
+                .perform(mockRequest)
+                .andExpect(status().isCreated())
+                .andDo(print())
+           //   .andExpect(jsonPath("$.id", is(1)))
+                .andReturn().getResponse();
+
+        verify(this.service, times(1)).create(any(Employee.class));
+        verifyNoMoreInteractions(this.service);
+    }
+
+    @Test
+    @DisplayName("GET /api/users/{id}")
+    @WithMockUser(roles = "USER")
+    public void getPassByIdTest() throws Exception {
+        EmployeeReadDto response =  EmployeeReadDto.builder()
+                .name("Mike")
+                .build();
+
+        var employee = Employee.builder()
+                .id(1)
+                .name("Mike")
+                .build();
+
+        when(employeeConverter.toReadDto(any(Employee.class))).thenReturn(response);
+        when(service.getById(1)).thenReturn(employee);
+
+        MockHttpServletRequestBuilder mockRequest = get("/api/users/1");
 
         mockMvc.perform(mockRequest)
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", notNullValue()))
-                .andExpect(jsonPath("$.firstName", is("John")));
+                .andExpect(jsonPath("$.name", is("Mike")));
+
+        verify(service).getById(anyInt());
     }
 
-    @Ignore
     @Test
-    public void getEmployeeById_success() throws Exception {
-
-        Employee employee = Employee.builder()
-                .name("Mark")
-                .country("France")
+    @DisplayName("PUT /api/users/{id}")
+    @WithMockUser(roles = "ADMIN")
+    public void updatePassByIdTest() throws Exception {
+        var response = EmployeeDto.builder()
+                .id(1)
                 .build();
+        var employee = Employee.builder().id(1).build();
 
-        Mockito.when(repository.findById(employee.getId())).thenReturn(java.util.Optional.of(employee));
+        when(employeeConverter.toDto(any(Employee.class))).thenReturn(response);
+        when(employeeConverter.toEmployee(any(EmployeeDto.class))).thenReturn(employee);
+        when(service.updateById(eq(1), any(Employee.class))).thenReturn(employee);
 
-        mockMvc.perform(MockMvcRequestBuilders.get("/api/users/1")
-                        .contentType(MediaType.APPLICATION_JSON))
+        MockHttpServletRequestBuilder mockRequest = MockMvcRequestBuilders
+                .put("/api/users/1")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(mapper.writeValueAsString(employee));
+
+        mockMvc.perform(mockRequest)
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", notNullValue()))
-                .andExpect(jsonPath("$.firstName", is("Mark")));
+                .andExpect(jsonPath("$.id", is(1)));
+
+        verify(service).updateById(eq(1), any(Employee.class));
     }
 
-    @Ignore
     @Test
-    public void getAllEmployees_success() throws Exception {
+    @DisplayName("PATCH /api/users/{id}")
+    @WithMockUser(roles = "ADMIN")
+    public void deletePassTest() throws Exception {
 
-        Employee employee = Employee.builder()
-                .name("Mark")
-                .country("France")
+        doNothing().when(service).removeById(1);
+
+        MockHttpServletRequestBuilder mockRequest = patch("/api/users/1");
+
+        mockMvc.perform(mockRequest)
+                .andExpect(status().isNoContent());
+
+        verify(service).removeById(1);
+    }
+
+    @Test
+    @DisplayName("GET /api/users/p")
+    @WithMockUser(roles = "USER")
+    public void getUsersPageTest() throws Exception {
+
+        var employee1 = Employee.builder().id(1).name("John").country("US").build();
+        var employee2 = Employee.builder().id(2).name("Jane").country("UK").build();
+        var employee3 = Employee.builder().id(3).name("Bob").country("US").build();
+        List<Employee> list = Arrays.asList(employee1, employee2, employee3);
+        Page<Employee> employeesPage = new PageImpl<>(list);
+        Pageable pageable = PageRequest.of(0, 5);
+
+        when(service.getAllWithPagination(eq(pageable))).thenReturn(employeesPage);
+
+        MvcResult result = mockMvc.perform(get("/api/users/p")
+                        .param("page", "0")
+                        .param("size", "5"))
+                .andExpect(status().isOk())
+                .andReturn();
+
+        verify(service).getAllWithPagination(eq(pageable));
+
+        String contentType = result.getResponse().getContentType();
+        assertNotNull(contentType);
+        assertTrue(contentType.contains(MediaType.APPLICATION_JSON_VALUE));
+        String responseContent = result.getResponse().getContentAsString();
+        assertNotNull(responseContent);
+    }
+
+
+    @Test
+    @DisplayName("GET /api/users/e_null")
+    @WithMockUser(roles = "USER")
+    public void getEmailsByNullTest() throws Exception {
+        var employee = EmployeeDto.builder()
+                .id(1)
+                .name("John")
+                .email(null)
                 .build();
 
-        List<Employee> records = new ArrayList<>(Arrays.asList(employee));
+        List<EmployeeDto> employees = List.of(employee);
 
-        repository.save(employee);
+        when(employeeConverter.toDtoList(anyList())).thenReturn(employees);
 
-        Mockito.when(repository.findAll()).thenReturn(records);
-
-        mockMvc.perform(MockMvcRequestBuilders
-                        .get("/users")
-                        .contentType(MediaType.APPLICATION_JSON))
+        MvcResult result = mockMvc.perform(get("/api/users/e_null"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[2].firstName", is("Mark")));
+                .andExpect(jsonPath("$[0].id", is(1)))
+                .andExpect(jsonPath("$[0].name", is("John")))
+                .andReturn();
+
+        verify(service).filterByEmailIsNull();
+        String contentType = result.getResponse().getContentType();
+        assertNotNull(contentType);
+        assertTrue(contentType.contains(MediaType.APPLICATION_JSON_VALUE));
+        String responseContent = result.getResponse().getContentAsString();
+        assertNotNull(responseContent);
+    }
+
+
+    @Test
+    @DisplayName("PATCH /api/users/c_up_upper")
+    @WithMockUser(roles = "ADMIN")
+    public void updateCountryFirstLetterToUpperCaseTest() throws Exception {
+        var employee = EmployeeDto.builder()
+                .id(1)
+                .name("John")
+                .email("joth@gmail.com")
+                .country("Us")
+                .build();
+
+        List<EmployeeDto> employees = List.of(employee);
+
+        when(employeeConverter.toDtoList(anyList())).thenReturn(employees);
+
+        MvcResult result = mockMvc.perform(patch("/api/users/c_up_upper"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$[0].id", is(1)))
+                .andExpect(jsonPath("$[0].name", is("John")))
+                .andExpect(jsonPath("$[0].country", is("Us")))
+                .andReturn();
+
+        verify(service).updateCountryFirstLetterToUpperCase();
+
+        String contentType = result.getResponse().getContentType();
+        assertNotNull(contentType);
+        assertTrue(contentType.contains(MediaType.APPLICATION_JSON_VALUE));
+        String responseContent = result.getResponse().getContentAsString();
+        assertNotNull(responseContent);
     }
 
 }
